# molaoj

./: Cargo.toml  README.md  docker-compose.yml
mola-dispatcher/: Cargo.toml  build.rs
mola-dispatcher/proto/: task.proto
mola-dispatcher/src/: dispatcher.rs  grpc_service.rs  lib.rs  main.rs
mola-dispatcher/tests/: grpc_tests.rs
mola-worker/: Cargo.toml
mola-worker/src/: main.rs  sandbox_builder.rs  worker.rs
