[package]
name = "mola-dispatcher"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
async-stream = "0.3.6"
lapin = "3.4.0"
prost = "0.14.1"
prost-types = "0.14.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
tokio = { version = "1.47.1", features=["macros", "rt-multi-thread", "signal"] }
tokio-postgres = { version = "0.7.13", features = ["with-serde_json-1"] }
tokio-stream = "0.1.17"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing = { version = "0.1.41", features = ["async-await"] }
uuid = { version = "1.18.1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"
