[package]
name = "mola-worker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
env_logger = "0.11.8"
futures-lite = "2.6.1"
lapin = "3.4.0"
log = "0.4.28"
serde = "1.0.219"
serde_json = "1.0.143"
tokio = { version = "1.47.1", features = ["full"] }
tracing = { version = "0.1.41", features = ["log"] }
